# CPMULTI

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
include/: Filters.h  ImageLoader.h  ImageSplitter.h  Menus.h  PerformanceAnalyzer.h  ThreadPool.h  Transformations.h
src/: Filters.cpp  ImageLoader.cpp  ImageSplitter.cpp  Menus.cpp  PerformanceAnalizer.cpp  ThreadPool.cpp  Transformations.cpp  main.cpp
